version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/AcousticTransferAdmittanceMatrix.rst.txt
.. vale off



:class:`AcousticTransferAdmittanceMatrix`
=========================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticTransferAdmittanceMatrix

   Bases: :py:obj:`object`


   
   Defines a AcousticTransferAdmittanceMatrix.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AcousticTransferAdmittanceMatrix

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PromoteToNamedSelection`
            - Run the PromoteToNamedSelection action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Alpha1Imag`
            - Gets or sets the Alpha1Imag.
          * - :py:attr:`~Alpha1Real`
            - Gets or sets the Alpha1Real.
          * - :py:attr:`~Alpha2Imag`
            - Gets or sets the Alpha2Imag.
          * - :py:attr:`~Alpha2Real`
            - Gets or sets the Alpha2Real.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DynamicViscosity`
            - Gets or sets the DynamicViscosity.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GridPeriod`
            - Gets or sets the GridPeriod.
          * - :py:attr:`~HoleRadius`
            - Gets or sets the HoleRadius.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~MassDensity`
            - Gets or sets the MassDensity.
          * - :py:attr:`~Port1`
            - Gets or sets the Port1.
          * - :py:attr:`~Port2`
            - Gets or sets the Port2.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RatioOfInnerAndOuterRadius`
            - Gets or sets the RatioOfInnerAndOuterRadius.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~SharedRefBody`
            - Gets or sets the SharedRefBody.
          * - :py:attr:`~StructureThickness`
            - Gets or sets the StructureThickness.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TransferAdmittanceModel`
            - Gets or sets the TransferAdmittanceModel.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~Y11Imag`
            - Gets or sets the Y11Imag.
          * - :py:attr:`~Y11Real`
            - Gets or sets the Y11Real.
          * - :py:attr:`~Y12Imag`
            - Gets or sets the Y12Imag.
          * - :py:attr:`~Y12Real`
            - Gets or sets the Y12Real.
          * - :py:attr:`~Y21Imag`
            - Gets or sets the Y21Imag.
          * - :py:attr:`~Y21Real`
            - Gets or sets the Y21Real.
          * - :py:attr:`~Y22Imag`
            - Gets or sets the Y22Imag.
          * - :py:attr:`~Y22Real`
            - Gets or sets the Y22Real.







Property detail
---------------
.. py:property:: Alpha1Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Alpha1Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Alpha1Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Alpha1Real.
















   ..
       !! processed by numpydoc !!

.. py:property:: Alpha2Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Alpha2Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Alpha2Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Alpha2Real.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[list[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DynamicViscosity
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the DynamicViscosity.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GridPeriod
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the GridPeriod.
















   ..
       !! processed by numpydoc !!

.. py:property:: HoleRadius
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the HoleRadius.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSLoadAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: MassDensity
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the MassDensity.
















   ..
       !! processed by numpydoc !!

.. py:property:: Port1
   :type: Optional[Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPort]

   
   Gets or sets the Port1.
















   ..
       !! processed by numpydoc !!

.. py:property:: Port2
   :type: Optional[Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPort]

   
   Gets or sets the Port2.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RatioOfInnerAndOuterRadius
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the RatioOfInnerAndOuterRadius.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]

   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: SharedRefBody
   :type: Optional[Ansys.ACT.Automation.Mechanical.Body]

   
   Gets or sets the SharedRefBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: StructureThickness
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the StructureThickness.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferAdmittanceModel
   :type: Optional[Ansys.Mechanical.DataModel.Enums.TransferAdmittanceModelType]

   
   Gets or sets the TransferAdmittanceModel.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y11Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y11Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y11Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y11Real.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y12Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y12Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y12Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y12Real.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y21Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y21Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y21Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y21Real.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y22Imag
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y22Imag.
















   ..
       !! processed by numpydoc !!

.. py:property:: Y22Real
   :type: Optional[Ansys.ACT.Mechanical.Fields.Field]

   
   Gets or sets the Y22Real.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: list[ChildrenType]) -> list[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToNamedSelection() -> Iterable[Ansys.ACT.Automation.Mechanical.NamedSelection]

   
   Run the PromoteToNamedSelection action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on